# url-password-wrap

./: .gitignore  Cargo.toml  README.md  sample.env
url-wrap-adapter/: Cargo.toml
url-wrap-adapter/src/: modules.rs
url-wrap-adapter/src/model/: wrap.rs
url-wrap-adapter/src/model/wrap/: password.rs  redirect_url.rs
url-wrap-adapter/src/persistence/: mongodb.rs
url-wrap-adapter/src/repository/: mod.rs  wrap.rs
url-wrap-app/: Cargo.toml
url-wrap-app/src/model/: wrap.rs
url-wrap-app/src/usecase/: health_check.rs  mod.rs  wrap.rs
url-wrap-driver/: Cargo.toml
url-wrap-driver/src/context/: axum_helper.rs
url-wrap-driver/src/model/: wrap.rs
url-wrap-driver/src/module/: mod.rs
url-wrap-driver/src/routes/: mod.rs  wrap.rs
url-wrap-driver/src/startup/: mod.rs
url-wrap-kernel/: Cargo.toml
url-wrap-kernel/src/model/: mod.rs  wrap.rs
url-wrap-kernel/src/model/wrap/: auth_type.rs
url-wrap-kernel/src/repository/: wrap.rs
