[package]
name = "url-wrap-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url-wrap-kernel = { path = "../url-wrap-kernel" }
anyhow = "1.0.58"
argon2 = "0.4.1"
aes-gcm = "0.10.1"
data-encoding = "2.3.2"
async-trait = "0.1.56"
dotenv = "0.15.0"
chrono = "0.4.22"
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.140", features = ["derive"] }
futures = "0.3.21"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["tokio-runtime"]
