[package]
name = "url-wrap-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url-wrap-kernel = { path = "../url-wrap-kernel" }
url-wrap-adapter = { path = "../url-wrap-adapter" }
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["full"] }
chrono = "0.4.22"
