[package]
name = "url-wrap-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url-wrap-kernel = { path = "../url-wrap-kernel" }
url-wrap-app = { path = "../url-wrap-app" }
url-wrap-adapter = { path = "../url-wrap-adapter" }
axum = "0.5.13"
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
dotenv = "0.15.0"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
thiserror = "1.0.35"
validator = { version = "0.16.0", features = ["derive"] }
http-body = "0.4.5"
